# metapopulation_epidemics

./: .gitignore  README.md  pyproject.toml
result/: result_analysis.ipynb
src/: main.py
