[tool.poetry]
name = "corona_simulation"
version = "0.1.0"
description = "SIR model based epidemic simulation for evaluating the effect of isolation policy"
authors = ["Keisuke Nagashima <energyrevo21@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
