[tool.poetry]
name = "metapopulation_epidemics"
version = "0.1.0"
description = "Agent based epidemic simulation code for evaluating the effect of isolation policy"
authors = ["Keisuke Nagashima <energyrevo21@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
networkx = "^2.4"
jupyter = "^1.0.0"
pandas = "^1.0.1"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
